Build and run tests for qtquickcontrols2 in Coin
Change-Id: Id24ad950874d400e2cd5188d999910ec26cbe292
Reviewed-by: Qt CMake Build Bot
Reviewed-by: Simon Hausmann <simon.hausmann@qt.io>

--- a/coin/module_config.yaml
+++ b/coin/module_config.yaml
@@ -7,8 +7,7 @@ accept_configuration:
 build_instructions:
   - !include "{{qt/qtbase}}/prepare_building_env.yaml"
   - !include "{{qt/qtbase}}/cmake_module_build_instructions.yaml"
+  - !include "{{qt/qtbase}}/cmake_build_and_upload_test_artifacts.yaml"
 
 test_instructions:
-  - type: EnvironmentVariable
-    variableName: Dummy
-    variableValue: dummy
+  - !include "{{qt/qtbase}}/cmake_regular_test_instructions.yaml"
