--- a/src/imports/qtqml/CMakeLists.txt
+++ b/src/imports/qtqml/CMakeLists.txt
@@ -1,5 +1,15 @@
 # Generated from qtqml.pro.
 
+set(module_dynamic_qml_imports
+    QtQml.Models
+)
+
+if (QT_FEATURE_qml_worker_script)
+    list(APPEND module_dynamic_qml_imports
+        QtQml.WorkerScript
+    )
+endif()
+
 #####################################################################
 ## qmlplugin Plugin:
 #####################################################################
@@ -9,10 +19,8 @@ qt_add_qml_module(qmlplugin
     VERSION "2.${CMAKE_PROJECT_VERSION_MINOR}"
     DESIGNER_SUPPORTED
     CLASSNAME QtQmlPlugin
-    IMPORTS
-        QtQml.Models
-        QtQml.WorkerScript
     SKIP_TYPE_REGISTRATION
+    IMPORTS ${module_dynamic_qml_imports}
     SOURCES
         plugin.cpp
     LIBRARIES
@@ -26,5 +34,12 @@ qt_add_qml_module(qmlplugin
 
 #### Keys ignored in scope 1:.:.:qtqml.pro:<TRUE>:
 # CXX_MODULE = "qml"
+# DYNAMIC_QMLDIR = "module QtQml" "plugin qmlplugin" "classname QtQmlPlugin" "typeinfo plugins.qmltypes" "designersupported" "import QtQml.Models"
 # IMPORT_VERSION = "2.$$QT_MINOR_VERSION"
 # TARGETPATH = "QtQml"
+
+## Scopes:
+#####################################################################
+
+#### Keys ignored in scope 2:.:.:qtqml.pro:QT_FEATURE_qml_worker_script:
+# DYNAMIC_QMLDIR = "import QtQml.WorkerScript"
