Support for QML Types Registrar
Change-Id: Iff5da66ae179601fbfd369b9bc31005554df5873
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,11 @@
 # Generated from src.pro.
 # special case skip regeneration
+
+if (NOT QT_FEATURE_commandlineparser)
+    message(FATAL_ERROR "QT_FEATURE_commandlineparser required to compile qmltyperegistrar")
+endif()
+
+add_subdirectory(qmltyperegistrar)
 add_subdirectory(qml)
 add_subdirectory(qmlmodels)
 
