Fix the build with -no-gui
Task-number: QTBUG-74602
Change-Id: I08e8df96b10fbc0b58fbdae296c9d54de977e3f9
Reviewed-by: Tony Sarajärvi <tony.sarajarvi@qt.io>

--- a/src/quick/configure.json
+++ b/src/quick/configure.json
@@ -3,9 +3,11 @@
     "depends": [
         "core-private",
         "qml-private",
+        "gui",
         "gui-private",
         "qmlmodels-private"
     ],
+    "condition": "module.gui",
     "testDir": "../../config.tests",
 
     "commandline": {
