Post merge fixes
Change-Id: Ie8aca222809f35174fb6c6488832ec3ff5432272
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>

--- a/examples/quick/scenegraph/fboitem/CMakeLists.txt
+++ b/examples/quick/scenegraph/fboitem/CMakeLists.txt
@@ -36,6 +36,8 @@ target_link_libraries(fboitem PUBLIC
 # Resources:
 set(fboitem_resource_files
     "main.qml"
+    "shaders/+qsb/checker.frag"
+    "shaders/checker.frag"
 )
 
 qt6_add_resources(fboitem "fboitem"
