--- a/src/imports/models/CMakeLists.txt
+++ b/src/imports/models/CMakeLists.txt
@@ -7,7 +7,7 @@
 qt_add_qml_module(modelsplugin
     TARGET_PATH "QtQml/Models.2"
     URI "QtQml.Models"
-    VERSION "2.${CMAKE_PROJECT_VERSION_MINOR}"
+    VERSION "2.15"
     DESIGNER_SUPPORTED
     CLASSNAME QtQmlModelsPlugin
     SKIP_TYPE_REGISTRATION
@@ -23,5 +23,5 @@ qt_add_qml_module(modelsplugin
 
 #### Keys ignored in scope 1:.:.:models.pro:<TRUE>:
 # CXX_MODULE = "qml"
-# IMPORT_VERSION = "2.$$QT_MINOR_VERSION"
+# IMPORT_VERSION = "2.15"
 # TARGETPATH = "QtQml/Models.2"
