--- a/src/imports/particles/CMakeLists.txt
+++ b/src/imports/particles/CMakeLists.txt
@@ -7,7 +7,7 @@
 qt_add_qml_module(particlesplugin
     TARGET_PATH "QtQuick/Particles.2"
     URI "QtQuick.Particles"
-    VERSION "2.${CMAKE_PROJECT_VERSION_MINOR}"
+    VERSION "2.15"
     CLASSNAME QtQuick2ParticlesPlugin
     SKIP_TYPE_REGISTRATION
     SOURCES
@@ -26,5 +26,5 @@ qt_add_qml_module(particlesplugin
 
 #### Keys ignored in scope 1:.:.:particles.pro:<TRUE>:
 # CXX_MODULE = "qml"
-# IMPORT_VERSION = "2.$$QT_MINOR_VERSION"
+# IMPORT_VERSION = "2.15"
 # TARGETPATH = "QtQuick/Particles.2"
