--- a/src/imports/shapes/CMakeLists.txt
+++ b/src/imports/shapes/CMakeLists.txt
@@ -6,7 +6,7 @@
 
 qt_add_qml_module(qmlshapesplugin
     URI "QtQuick.Shapes"
-    VERSION "1.${CMAKE_PROJECT_VERSION_MINOR}"
+    VERSION "1.15"
     CLASSNAME QmlShapesPlugin
     SKIP_TYPE_REGISTRATION
     SOURCES
@@ -25,5 +25,5 @@ qt_add_qml_module(qmlshapesplugin
 
 #### Keys ignored in scope 1:.:.:shapes.pro:<TRUE>:
 # CXX_MODULE = "qml"
-# IMPORT_VERSION = "1.$$QT_MINOR_VERSION"
+# IMPORT_VERSION = "1.15"
 # TARGETPATH = "QtQuick/Shapes"
