--- a/src/imports/workerscript/CMakeLists.txt
+++ b/src/imports/workerscript/CMakeLists.txt
@@ -7,7 +7,7 @@
 qt_add_qml_module(workerscriptplugin
     TARGET_PATH "QtQml/WorkerScript.2"
     URI "QtQml.WorkerScript"
-    VERSION "2.${CMAKE_PROJECT_VERSION_MINOR}"
+    VERSION "2.15"
     DESIGNER_SUPPORTED
     CLASSNAME QtQmlWorkerScriptPlugin
     SKIP_TYPE_REGISTRATION
@@ -23,5 +23,5 @@ qt_add_qml_module(workerscriptplugin
 
 #### Keys ignored in scope 1:.:.:workerscript.pro:<TRUE>:
 # CXX_MODULE = "qml"
-# IMPORT_VERSION = "2.$$QT_MINOR_VERSION"
+# IMPORT_VERSION = "2.15"
 # TARGETPATH = "QtQml/WorkerScript.2"
