--- a/tools/qmllint/CMakeLists.txt
+++ b/tools/qmllint/CMakeLists.txt
@@ -8,13 +8,15 @@ qt_add_tool(qmllint
     TOOLS_TARGET Qml # special case
     SOURCES
         componentversion.cpp componentversion.h
-        fakemetaobject.cpp fakemetaobject.h
         findunqualified.cpp findunqualified.h
+        importedmembersvisitor.cpp importedmembersvisitor.h
         main.cpp
-        qcoloroutput.cpp qcoloroutput_p.h
-        qmljstypedescriptionreader.cpp qmljstypedescriptionreader.h
+        metatypes.h
+        qcoloroutput.cpp qcoloroutput.h
         scopetree.cpp scopetree.h
+        typedescriptionreader.cpp typedescriptionreader.h
     LIBRARIES
+        Qt::CorePrivate
         Qt::QmlDevToolsPrivate
     PUBLIC_LIBRARIES
         Qt::QmlDevTools
