--- a/src/imports/window/CMakeLists.txt
+++ b/src/imports/window/CMakeLists.txt
@@ -7,7 +7,7 @@
 qt_add_qml_module(windowplugin
     TARGET_PATH "QtQuick/Window.2"
     URI "QtQuick.Window"
-    VERSION "2.${CMAKE_PROJECT_VERSION_MINOR}"
+    VERSION "2.15"
     DESIGNER_SUPPORTED
     CLASSNAME QtQuick2WindowPlugin
     SKIP_TYPE_REGISTRATION
@@ -25,5 +25,5 @@ qt_add_qml_module(windowplugin
 
 #### Keys ignored in scope 1:.:.:window.pro:<TRUE>:
 # CXX_MODULE = "qml"
-# IMPORT_VERSION = "2.$$QT_MINOR_VERSION"
+# IMPORT_VERSION = "2.15"
 # TARGETPATH = "QtQuick/Window.2"
