QML Type Registrar changes
Change-Id: I36254a688f575e6c7f717ee4019e4d49f73a60f7
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>

--- a/src/imports/folderlistmodel/CMakeLists.txt
+++ b/src/imports/folderlistmodel/CMakeLists.txt
@@ -9,6 +9,7 @@ qt_add_qml_module(qmlfolderlistmodelplugin
     VERSION "2.15"
     CLASSNAME QmlFolderListModelPlugin
     SKIP_TYPE_REGISTRATION
+    GENERATE_QMLTYPES
     SOURCES
         fileinfothread.cpp fileinfothread_p.h
         fileproperty_p.h
