--- a/src/imports/labsmodels/CMakeLists.txt
+++ b/src/imports/labsmodels/CMakeLists.txt
@@ -9,6 +9,7 @@ qt_add_qml_module(labsmodelsplugin
     VERSION "1.0"
     CLASSNAME QtQmlLabsModelsPlugin
     SKIP_TYPE_REGISTRATION
+    GENERATE_QMLTYPES
     SOURCES
         plugin.cpp
     LIBRARIES
